--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ParkinsonProject</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="user_name">User name</string>
+    <string name="login_screen">Login Screen</string>
 </resources>
