--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -5,4 +5,5 @@
     <string name="password">סיסמה</string>
     <string name="user_name">שם משתמש</string>
     <string name="login_screen">מסך התחברות</string>
+    <string name="one_and_a_half"> <sup>1</sup>/<sub>2</sub>     1      כדור  </string>
 </resources>
