--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="password">Password</string>
     <string name="user_name">User name</string>
     <string name="login_screen">Login Screen</string>
+    <string name="one_and_a_half"> 1 כדור<sup>1</sup>/<sub>2</sub></string>
 </resources>
